--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
 	<title>Mode 2 Assignment</title>
+	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
 <h1> Hello Coursera Assignment</h1>
+<p> hola everyone </p>
 </body>
 </html>
