Updates on Mod 2 Assignment:

--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -5,7 +5,31 @@
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<h1> Hello Coursera Assignment</h1>
-<p> hola everyone </p>
+<h1 style="text-align: center;"> Our Menu</h1>
+<div class="container-fluid">
+	<div class="row">
+			<div class="col-md-6"> 
+				<p id="chicken"> Chicken </p> 
+				<p> God has a purpose for your pain, a reason for your struggle, and a reward for your faithfulness. Trust Him and 	don’t give up.” Anonymous God has a purpose for your pain, a reason for your struggle, and a reward for your faithfulness. Trust Him and 	don’t give up.” AnonymousGod has a purpose for your pain, a reason for your struggle, and a reward for your faithfulness. Trust Him and 	don’t give up.” AnonymousGod has a purpose for your pain, a reason for your struggle, and a reward for your faithfulness. Trust Him and 	don’t give up.” AnonymousGod has a purpose for your pain, a reason for your struggle, and a reward for your faithfulness. Trust Him and 	don’t give up.” Anonymous</p>
+		   </div>	
+	</div>
+</div>
+<div class="container-fluid">
+	<div class="row">
+		   <div class="col-md-6"> 
+				<p id="beef"> Beef </p> 
+				<p> God has a purpose for your pain, a reason for your struggle, and a reward for your faithfulness. Trust Him and 	don’t give up.” Anonymous God has a purpose for your pain, a reason for your struggle, and a reward for your faithfulness. Trust Him and 	don’t give up.” AnonymousGod has a purpose for your pain, a reason for your struggle, and a reward for your faithfulness. Trust Him and 	don’t give up.” AnonymousGod has a purpose for your pain, a reason for your struggle, and a reward for your faithfulness. Trust Him and 	don’t give up.” AnonymousGod has a purpose for your pain, a reason for your struggle, and a reward for your faithfulness. Trust Him and 	don’t give up.” Anonymous</p>
+		   </div>	
+	</div>
+</div>
+<div class="container-fluid">
+	<div class="row">
+		   <div class="col-md-6"> 
+				<p id="sushi"> Sushi </p> 
+				<p> God has a purpose for your pain, a reason for your struggle, and a reward for your faithfulness. Trust Him and 	don’t give up.” Anonymous God has a purpose for your pain, a reason for your struggle, and a reward for your faithfulness. Trust Him and 	don’t give up.” AnonymousGod has a purpose for your pain, a reason for your struggle, and a reward for your faithfulness. Trust Him and 	don’t give up.” AnonymousGod has a purpose for your pain, a reason for your struggle, and a reward for your faithfulness. Trust Him and 	don’t give up.” AnonymousGod has a purpose for your pain, a reason for your struggle, and a reward for your faithfulness. Trust Him and 	don’t give up.” Anonymous</p>
+		   </div>	
+	</div>
+</div>
+
 </body>
 </html>
