Small change in index.

--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -33,13 +33,13 @@
         <div id="collapsable-nav" class="collapse navbar-collapse">
            <ul id="nav-list" class="nav navbar-nav navbar-right">
             <li>
-              <a href="#Chicken"class="hidden-lg hidden-sm hidden-md hidden-xs">Chicken</a>
+              <a href="#Chicken"class="hidden-lg hidden-sm hidden-md">Chicken</a>
             </li>
             <li>
-              <a href="#Beef" class="hidden-lg hidden-sm hidden-md hidden-xs">Beef</a>
+              <a href="#Beef" class="hidden-lg hidden-sm hidden-md">Beef</a>
             </li>
             <li>
-              <a href="#Sushi" class="hidden-lg hidden-sm hidden-md hidden-xs">Sushi</a>
+              <a href="#Sushi" class="hidden-lg hidden-sm hidden-md">Sushi</a>
             </li>
           </ul><!-- #nav-list -->
         </div><!-- .collapse .navbar-collapse -->
