Additional Changes in index.

--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -64,7 +64,7 @@
               itaque cupiditate totam.Lorem ipsum dolor sit amet, consectetur
               adipisicing elit.  Eaque inventore esse minima incidunt impedit.  Asperiores, voluptatem.
               Sint aspernatur provident, rem odio dolorem eaque voluptatibus modi reprehenderit minima,
-              itaque cupiditate totam. (End of Chicken section) <a href="#top">Back to Top</a></p>
+              itaque cupiditate totam. (End of Chicken section) <a href="#top" class="hidden-lg hidden-md">Back to Top</a></p>
             </div>
             </div>
             <div class="col-sm-4">
@@ -79,7 +79,7 @@
               itaque cupiditate totam.Lorem ipsum dolor sit amet, consectetur
               adipisicing elit.  Eaque inventore esse minima incidunt impedit.  Asperiores, voluptatem.
               Sint aspernatur provident, rem odio dolorem eaque voluptatibus modi reprehenderit minima,
-              itaque cupiditate totam. (End of Beef section) <a href="#top">Back to Top</a> </p>
+              itaque cupiditate totam. (End of Beef section) <a href="#top" class="hidden-lg hidden-md">Back to Top</a> </p>
             </div>
             </div>
             <div class="col-sm-4">
@@ -94,7 +94,7 @@
               itaque cupiditate totam.Lorem ipsum dolor sit amet, consectetur
               adipisicing elit.  Eaque inventore esse minima incidunt impedit.  Asperiores, voluptatem.
               Sint aspernatur provident, rem odio dolorem eaque voluptatibus modi reprehenderit minima,
-              itaque cupiditate totam. (End of Sushi section) <a href="#top">Back to Top</a></p> 
+              itaque cupiditate totam. (End of Sushi section) <a href="#top" class="hidden-lg hidden-md">Back to Top</a></p> 
             </div>
             </div>
  
